--- a/part5/bloglist-frontend-master/src/index.css
+++ b/part5/bloglist-frontend-master/src/index.css
@@ -1,3 +1,22 @@
 h1 {
     color: blue
 }
+
+.validate {
+    color: green;
+    background: lightgray;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px; 
+  }
+  .warn {
+    color: red;
+    background: lightgray;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px; 
+  }
